methods.returning.MethodsReturning.scala.code
var c:Int=0
var seenBaggle:Int=0
def haveBaggle():Boolean = {
  for(c<-1 to 6){
    forward(); 
  for(e<-1 to 6){
    backward();
  }
    if (isOverBaggle()){
    	seenBaggle=seenBaggle+1;
  if (seenBaggle!=0){
    return true
  }else{
    return false
	}
	}
}
}